examples/compiler_errors/row_effects/unknown_performed_operation_e404.flx
effect Console {
    print: String -> ()
}

fn bad() -> Unit with Console {
    perform Console.read("x")
}

fn main() -> Unit with IO {
    bad() handle Console {
        print(resume, _msg) -> resume(())
    };
}
